cncProd/force-app/main/default/objects/COE_Bid_Period__c/fields/A1__c.field-meta.xml
<CustomField>
    <fullName>A1__c</fullName>
    <inlineHelpText>CAR 1600CC AND BELOW (ONLY FOR DC COE)</inlineHelpText>
    <label>A1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>