cncProd/force-app/main/default/objects/COE_Bid_Period__c/fields/A2__c.field-meta.xml
<CustomField>
    <fullName>A2__c</fullName>
    <inlineHelpText>TAXI BUYBACK COE</inlineHelpText>
    <label>A2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>