cncProd/force-app/main/default/objects/COE_Bid_Period__c/fields/A3__c.field-meta.xml
<CustomField>
    <fullName>A3__c</fullName>
    <inlineHelpText>TAXI COE BIDED BY C&amp;C (80% QP)</inlineHelpText>
    <label>A3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>