cncProd/force-app/main/default/objects/COE_Bid_Period__c/fields/B2__c.field-meta.xml
<CustomField>
    <fullName>B2__c</fullName>
    <inlineHelpText>CAR WITHOUT ORDER</inlineHelpText>
    <label>B2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>