cncProd/force-app/main/default/objects/COE_Bid_Period__c/fields/B__c.field-meta.xml
<CustomField>
    <fullName>B__c</fullName>
    <inlineHelpText>CAR ABOVE 1600CC</inlineHelpText>
    <label>B</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>