cncProd/force-app/main/default/objects/COE_Bid_Period__c/fields/C1__c.field-meta.xml
<CustomField>
    <fullName>C1__c</fullName>
    <inlineHelpText>COMMERCIAL VEHICLES (ONLY FOR DC COE)</inlineHelpText>
    <label>C1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>