cncProd/force-app/main/default/objects/COE_Bid_Period__c/fields/C2__c.field-meta.xml
<CustomField>
    <fullName>C2__c</fullName>
    <inlineHelpText>COMMERCIAL (PQP)</inlineHelpText>
    <label>C2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>