cncProd/force-app/main/default/objects/COE_Bid_Period__c/fields/C3__c.field-meta.xml
<CustomField>
    <fullName>C3__c</fullName>
    <inlineHelpText>COMMERICAL (PQP)</inlineHelpText>
    <label>C3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>