cncProd/force-app/main/default/objects/COE_Bid_Period__c/fields/Overlapping_Dates__c.field-meta.xml
<CustomField>
    <fullName>Overlapping_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox field used in checking duplicate COE Bid Periods.</description>
    <label>Overlapping Dates</label>
    <type>Checkbox</type>
</CustomField>