cncProd/force-app/main/default/objects/COE_Bid_Period__c/validationRules/Duplicate_COE_Bid_Periods.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_COE_Bid_Periods</fullName>
    <active>true</active>
    <errorConditionFormula>Overlapping_Dates__c  = True
&amp;&amp;  $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c &lt;&gt; true</errorConditionFormula>
    <errorMessage>Duplicate COE Bid Period! Please choose another From Date and/or To Date.</errorMessage>
</ValidationRule>